@@ -14,6 +14,8 @@ Revision history for Dist-Mgr
     - Prevent the addition of multiple CI badge links (fixes #22)
     - Each command in distmgr binary have separate help sections (closes #30)
     - all make* functions have verbose option to print all output (closes #35)
+    - In git_release(), we now call git_status() to see whether we should
+      perform other git actions
 
 1.00    2020-12-30
     - Fix issue where ABSTRACT was being pulled from one of the test
